Corrected the problem where the base.css file was not showing

--- a/static/base.css
+++ b/static/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('media/amharclann-bord-gais.jpg') no-repeat center center fixed;
+    background: url('/media/amharclann-bord-gais.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -29,13 +29,13 @@ body {
 
 .shop-now-button {
     background: black;
-    color: white;
+    color: black;
     min-width: 260px;
 }
 
 .btn-black {
     background: black;
-    color: white;
+    color: ;
 }
 
 .btn-outline-black {
@@ -208,7 +208,7 @@ input[name='q']::placeholder {
 	/* btn */
 	display: inline-block;
     font-weight: 400;
-    color: #fff;
+    color: black;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
